--- a/MainLib/View/PersonVisitItemsListViews/PersonHierarchicalAssignmentsView.xaml
+++ b/MainLib/View/PersonVisitItemsListViews/PersonHierarchicalAssignmentsView.xaml
@@ -3,23 +3,26 @@
                     xmlns:local="clr-namespace:MainLib.PersonVisitItemsListViewModels">
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     <HierarchicalDataTemplate DataType="{x:Type local:PersonHierarchicalAssignmentsViewModel}" ItemsSource="{Binding NestedItems}">
+        <Border BorderThickness="1" BorderBrush="Black" Background="#FFDACC6F" HorizontalAlignment="Stretch">
+            <Grid >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-        <Grid >
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Grid.Row="0" Padding="0,0,5,0" HorizontalAlignment="Center" Text="{Binding FinSource}"/>
+                <Image Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="pack://application:,,,/Resources;component/Images/Assignment48x48.png"/>
 
-            <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"/>
 
-            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding RecordTypeName}" />
-            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding AssignDateTime}" />
-            <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding RoomName}" />
-        </Grid>
+                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding RecordTypeName}" />
+                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding AssignDateTime}" />
+                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding RoomName}" />
+            </Grid>
+        </Border>
     </HierarchicalDataTemplate>
 </ResourceDictionary>
