--- a/MainLib/View/PersonVisitItemsListViews/PersonHierarchicalVisitsView.xaml
+++ b/MainLib/View/PersonVisitItemsListViews/PersonHierarchicalVisitsView.xaml
@@ -4,18 +4,22 @@
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
     <HierarchicalDataTemplate DataType="{x:Type local:PersonHierarchicalVisitsViewModel}" ItemsSource="{Binding NestedItems}">
-        <Border BorderThickness="1" BorderBrush="Black" Background="LightGreen" HorizontalAlignment="Stretch">
+        <Border BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" Background="#FFB6B6B6">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"/>
+                <TextBlock Grid.Column="0" Grid.Row="0" Padding="0,0,5,0" HorizontalAlignment="Center" Text="{Binding FinSource}"/>
+                <Image Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="pack://application:,,,/Resources;component/Images/Visit48x48.png"/>
+                <Image Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Source="pack://application:,,,/Resources;component/Images/Ok48x48.png" 
+                       Visibility="{Binding IsCompleted, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
                 <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Name}" />
                 <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding DateTimePeriod}" />
