--- a/PatientInfoModule/Views/ModuleHeader.xaml
+++ b/PatientInfoModule/Views/ModuleHeader.xaml
@@ -1,22 +1,18 @@
-﻿<UserControl x:Class="PatientInfoModule.Views.ModuleHeader"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:fluent="urn:fluent-ribbon"
-             xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
-             mc:Ignorable="d" 
-             d:DesignHeight="300"
-             d:DesignWidth="300" 
-             d:DataContext="{d:DesignInstance viewModels:ModuleHeaderViewModel}">
-    <fluent:Ribbon>
-        <fluent:RibbonTabItem>
-            <fluent:RibbonTabItem.Header>
-                <TextBlock Margin="0">
-                    <Run Text="Пациент" />
-                    <Run Text="{Binding ShortName, Mode=OneWay}" />
-                </TextBlock>
-            </fluent:RibbonTabItem.Header>
-        </fluent:RibbonTabItem>
-    </fluent:Ribbon>
-</UserControl>
+﻿<fluent:RibbonTabItem x:Class="PatientInfoModule.Views.ModuleHeader"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:fluent="urn:fluent-ribbon"
+                      xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
+                      mc:Ignorable="d"
+                      d:DesignHeight="300"
+                      d:DesignWidth="300"
+                      d:DataContext="{d:DesignInstance viewModels:ModuleHeaderViewModel}">
+    <fluent:RibbonTabItem.Header>
+        <TextBlock Margin="0">
+            <Run Text="Пациент" />
+            <Run Text="{Binding ShortName, Mode=OneWay}" />
+        </TextBlock>
+    </fluent:RibbonTabItem.Header>
+</fluent:RibbonTabItem>
