--- a/Shell/ShellWindow.xaml
+++ b/Shell/ShellWindow.xaml
@@ -11,12 +11,14 @@
                      Title="Добро пожаловать"
                      Height="350"
                      Width="525"
-                     WindowState="Maximized" d:DataContext="{d:DesignInstance shell:ShellWindowViewModel}">
+                     WindowState="Maximized"
+                     d:DataContext="{d:DesignInstance shell:ShellWindowViewModel}">
     <DockPanel LastChildFill="True">
         <fluent:Ribbon regions:RegionManager.RegionName="{x:Static shared:RegionNames.ModuleList}"
                            DockPanel.Dock="Top">
             <fluent:Ribbon.Menu>
-                <fluent:Backstage IsEnabled="{Binding CanOpenMenu}">
+                <fluent:Backstage IsEnabled="{Binding CanOpenMenu}"
+                                  IsOpen="{Binding IsMenuOpen, Mode=TwoWay}">
                     <fluent:Backstage.Header>
                         <TextBlock Margin="3"
                                        Text="Основное Меню" />
