--- a/MainLib/View/ScanDocumentsView.xaml
+++ b/MainLib/View/ScanDocumentsView.xaml
@@ -74,18 +74,19 @@
                     <GroupBox Header="Настройки сканера">
                         <StackPanel Orientation="Vertical">
                             <ComboBox Name="ScannerSources" IsEnabled="{Binding ElementName=SourceUserSelected, Path=IsChecked}" Margin="2,5,2,0"/>
-                            <CheckBox Margin="2,5,2,0" Content="Двусторонний скан" Name="UseDuplex"/>
+                            <CheckBox Margin="2,5,2,2" Content="Двусторонний скан" Name="UseDuplex"/>
                         </StackPanel>
                     </GroupBox>
                     <DockPanel VerticalAlignment="Top">
                         <Button Name="ScanButton" Margin="2,5,2,5" MaxWidth="150"
                             Click="ScanButton_Click">
                             <StackPanel Orientation="Horizontal">
-                                <Image Source="pack://application:,,,/Resources;component/Images/Scanner.png" Stretch="Uniform" Height="36" Width="36"/>
+                                <Image x:Name="scanImage" Source="pack://application:,,,/Resources;component/Images/Scanner.png" Stretch="Uniform" Height="36" Width="36"/>
                                 <TextBlock Text="Сканировать" Margin="5,10" FontWeight="Bold" FontSize="14"/>
                             </StackPanel>
                         </Button>
-                    </DockPanel>                    
+                    </DockPanel>
+                    <CheckBox Margin="7,2,2,0" Content="Отметить все" IsChecked="{Binding SelectAllThumbnails}" Name="SelectAll"/>
                 </StackPanel>
 
                 <ListBox Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" Margin="2"
