--- a/PatientRecordsModule/Views/PersonHierarchicalAssignments.xaml
+++ b/PatientRecordsModule/Views/PersonHierarchicalAssignments.xaml
@@ -16,7 +16,7 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="0" Grid.Row="0" Padding="0,0,5,0" HorizontalAlignment="Center" Text="{Binding FinSource}"/>
-                <Image Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="pack://application:,,,/Shell.Shared;component/Images/Assignment48x48.png"/>
+                <Image Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="pack://application:,,,/Core;component/Resources/Images/Assignment48x48.png"/>
 
 
                 <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding RecordTypeName}" />
