--- a/Core.Wpf/Themes/Generic.xaml
+++ b/Core.Wpf/Themes/Generic.xaml
@@ -13,6 +13,66 @@
         <Setter Property="Foreground"
                 Value="White" />
     </Style>
+    <!--Control templates-->
+    <ControlTemplate x:Key="ValidationTemplate">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <AdornedElementPlaceholder Grid.Column="0" 
+                                       x:Name="placeholder" />
+            <Image Grid.Column="1" 
+                   VerticalAlignment="Center" 
+                   HorizontalAlignment="Right" 
+                   Width="16" 
+                   Height="16" 
+                   Source="pack://application:,,,/Core;Component/Resources/Images/Error16x16.png"
+                   ToolTip="{Binding ElementName=placeholder, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
+                   Margin="5 0 0 0" 
+                   x:Name="image">
+                <Image.Triggers>
+                    <EventTrigger RoutedEvent="Control.Loaded">
+                        <BeginStoryboard>
+                            <Storyboard TargetName="image" 
+                                        TargetProperty="Opacity">
+                                <DoubleAnimation From="0"
+                                                 To="1" 
+                                                 Duration="0:0:0.4" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                </Image.Triggers>
+            </Image>
+        </Grid>
+    </ControlTemplate>
+    <ControlTemplate x:Key="ValidationTemplateRightIcon">
+        <Grid>
+           <AdornedElementPlaceholder Grid.Column="0" 
+                                       x:Name="placeholder" />
+            <Image VerticalAlignment="Center" 
+                   HorizontalAlignment="Right" 
+                   Width="16" 
+                   Height="16" 
+                   Source="pack://application:,,,/Core;Component/Resources/Images/Error16x16.png"
+                   ToolTip="{Binding ElementName=placeholder, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
+                   Margin="0 0 5 0"
+                   x:Name="image">
+                <Image.Triggers>
+                    <EventTrigger RoutedEvent="Control.Loaded">
+                        <BeginStoryboard>
+                            <Storyboard TargetName="image" 
+                                        TargetProperty="Opacity">
+                                <DoubleAnimation From="0"
+                                                 To="1" 
+                                                 Duration="0:0:0.4" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                </Image.Triggers>
+            </Image>
+        </Grid>
+    </ControlTemplate>
     <!--Data templates-->
     <!--Busy Mediator-->
     <DataTemplate DataType="{x:Type mvvm:BusyMediator}">
