--- a/PatientRecordsModule/Views/PersonHierarchicalAssignments.xaml
+++ b/PatientRecordsModule/Views/PersonHierarchicalAssignments.xaml
@@ -17,11 +17,16 @@
 
                 <TextBlock Grid.Column="0" Grid.Row="0" Padding="0,0,5,0" HorizontalAlignment="Center" Text="{Binding FinSource}"/>
                 <Image Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="pack://application:,,,/Core;component/Resources/Images/Assignment48x48.png"/>
+                <ContentControl Grid.Column="0" Grid.Row="1" Grid.RowSpan="2"  Content="{Binding BusyMediator}"
+                        HorizontalAlignment="Stretch" Background="Transparent" BorderThickness="0"/>
 
+                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding RecordTypeName}"/>
+                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding AssignDateTime}"/>
+                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding RoomName}"/>
 
-                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding RecordTypeName}" />
-                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding AssignDateTime}" />
-                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding RoomName}" />
+                <ContentControl Content="{Binding CriticalFailureMediator}"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" />
             </Grid>
         </Border>
     </HierarchicalDataTemplate>
