--- a/PatientRecordsModule/Views/PersonRecordList.xaml
+++ b/PatientRecordsModule/Views/PersonRecordList.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PatientRecordsModule.Views.PersonVisitItemsList"
+﻿<UserControl x:Class="PatientRecordsModule.Views.PersonRecordList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -17,7 +17,7 @@
         <ToggleButton Grid.Column="0" Grid.Row="0" Background="White">
             <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
                 <Image  HorizontalAlignment="Right" VerticalAlignment="Bottom" Source="pack://application:,,,/Core;component/Resources/Images/AmbCard48x48.png" />
-                <TextBlock Text="{Binding AmbNumber}" />
+                <TextBlock VerticalAlignment="Center" Text="{Binding AmbNumber}"/>
             </StackPanel>
         </ToggleButton>
         <Border Grid.Column="0" Grid.Row="1" BorderBrush="Black" BorderThickness="1" Width="250">
