--- a/PatientRecordsModule/Views/PersonRecords.xaml
+++ b/PatientRecordsModule/Views/PersonRecords.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <views:PersonVisitItemsList Grid.Column="0" Grid.Row="0"/>
+        <views:PersonRecordList Grid.Column="0" Grid.Row="0" x:Name="personVisitItemsList"/>
         <views:PersonRecordEditor Grid.Column="1" Grid.Row="0" />
     </Grid>
 </UserControl>
